# django-content-editor

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  biome.json  eslint.config.mjs  package.json  pyproject.toml  runtests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
content_editor/: __init__.py  admin.py  apps.py  checks.py  contents.py  models.py  renderer.py  utils.py
content_editor/locale/ca/LC_MESSAGES/: django.mo  django.po
content_editor/locale/cs/LC_MESSAGES/: django.mo  django.po
content_editor/locale/de/LC_MESSAGES/: django.mo  django.po
content_editor/locale/es/LC_MESSAGES/: django.mo  django.po
content_editor/locale/fr/LC_MESSAGES/: django.mo  django.po
content_editor/locale/hr/LC_MESSAGES/: django.mo  django.po
content_editor/locale/it/LC_MESSAGES/: django.mo  django.po
content_editor/locale/nb/LC_MESSAGES/: django.mo  django.po
content_editor/locale/nl/LC_MESSAGES/: django.mo  django.po
content_editor/locale/pl/LC_MESSAGES/: django.mo  django.po
content_editor/locale/pt/LC_MESSAGES/: django.mo  django.po  djangojs.mo
content_editor/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
content_editor/static/content_editor/: cloning.js  content_editor.css  content_editor.js  context.js  django_admin_fixes.css  dragdrop.js  index.js  machine.js  material-icons.css  regions.js  save_shortcut.js  sections.js  tabbed_fieldsets.css  tabbed_fieldsets.js  utils.js
content_editor/templates/admin/: content_editor.html
content_editor/templatetags/: feincms_page_tags.py
docs/: admin-classes.rst  admin.rst  checks.rst  conf.py  contents.rst  contenttypes.rst  design-decisions.rst  index.rst  installation.rst  integration.rst  medialibrary.rst  page.rst  quickstart.rst  versioning.rst
docs/advanced/: base.rst
docs/releases/: 1.10.rst
feincms2_content/: admin.py  mixins.py  models.py
feincms2_content/static/feincms/: item_editor.css  item_editor.js
feincms2_content/templates/admin/: item_editor.html
feincms2_content/templatetags/: feincms_admin_tags.py
specs/: content-editor-js-restructure.md
testapp/: admin.py  models.py  runtests.py  settings.py  test_content_editor.py
tests/: README.md  README_integration_tests.md  conftest.py  cov.sh  requirements.txt
tests/testapp/: admin.py  models.py  settings.py  test_checks.py  test_content_editor.py  test_contents.py  test_playwright.py  test_playwright_helpers.py  tests.py  urls.py  views.py
tests/testapp/tests/: test_cms.py  test_page.py
(+15 files in other folders)
